fixed bottom timeline

--- a/src/components/DesktopArea/desktopArea.scss
+++ b/src/components/DesktopArea/desktopArea.scss
@@ -100,7 +100,7 @@ $Green:#4aba11;
         margin-top:1.5em !important;
     }
     .timeline{
-        bottom: 0;
+        bottom: 15px;
     }
 
 }
