--- a/src/components/ProfessionalWork/professionalWork.scss
+++ b/src/components/ProfessionalWork/professionalWork.scss
@@ -16,8 +16,8 @@ $LGrey:#eaeaea;
     right: 0;
     top: 0;
     bottom: 0;
-    background: transparent;
-    backdrop-filter: blur(4px);
+    background: rgba(0, 0, 0, 0.267);
+    backdrop-filter: blur(10px);
     z-index: 99;
     display:flex;
     flex-direction: column;
